styles/style.css
/* ... */
.mainnav a{
    margin: .2rem 0;
}
.mainnav-logo{
    justify-content: flex-start;
    padding: 0 1rem 0 .5rem;
    width: 50%;
    font-weight: 700;
    font-size: 36px;
    font-style: italic !important;
}
.mainnav-singlework > .mainnav-logo > a > img{
    height: 3rem;
    padding-left: 1rem;
}
.mainnav-directions{
    justify-content: flex-end;
    align-items: center;
    width: 50%;
    font-weight: 700;
    font-size: 28px;
}
.mainnav-directions > a{
    padding: 0 1rem 0 .5rem;
}
.mainnav-directions > a > i{
    padding: 0 .5rem 0 1rem;
}
.workNav{
    padding: .5rem 10rem 0rem 10rem;
}

.workNav img{ max-height: 4rem}
.projnav{
    justify-content: space-around;
    margin: 4rem 20% .25rem 20%;
    padding-top: 1.5rem;
}

.hero{
    max-height: 120rem;
    background-image: url("../img/BlueToPinkGradient.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: var(--other-color);
    color: var(--light-text-color);
    border-bottom: solid var(--dark-text-color);
    border-width: .1rem;
}
.hero-main{
    min-height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}
.hero-belowmain{
    text-align: center;
    margin-top: 2rem;
    padding: 2rem 0;
    display: flex;
    align-items: center;
    text-align: left;
    border: solid var(--dark-text-color);
    border-width: .1rem 0;
    background-color: var(--other-color);
}
.hero-belowmain div{
    margin: 1.5rem auto !important;
}
.quoteTextContainer .hero-textTiny{
    text-align: end;
    margin-right: 1rem;
    margin-top: 1rem;
}
.hero-textcontainer{
    text-align: start;
    max-width: 60%;
    padding-right: .5rem;
}
.hero-textcontainer > *{
    padding-top: 2rem;
}
.hero-textTitle{
    font-family: amandine, sans-serif;
    font-weight: 700;
    font-size: 132px;
    line-height: 100%;
}
.hero-textSubtitle{
    font-weight: 700;
    font-style: normal;
    font-size: 45px;
}
.hero-textTiny{
    font-weight: 700;
    font-style: normal;
    font-size: 20px;
}
.hero-text{
    font-weight: 700;
    font-style: normal;
    font-size:  35px;
}
.hero-imgcontainer{
    padding: 1rem 1rem .7rem 1rem;
    background-color: var(--projgrid-bg-color);
    border: solid var(--shadow-color);
    border-radius: 2rem;
    border-width: 1px;
    box-shadow: 10px 10px 0px var(--shadow-color);
}
.hero-img{
    max-height: 50rem;
    border-radius: 1.3rem;
}
.about-img{
    max-height: 35rem;
    width: auto;
    border-radius: 1.3rem;
}
.hero-socialIcons{
    color: var(--light-text-color);
    height: 100%;
    display: flex;
    font-size: 40px;
    padding: 0rem;
}
.hero-socialIcons a{
    margin: 0 1rem 0 0 !important;
    padding: 0;
}

.scrollTextContainer{
    position: fixed;     
    text-align: center;    
    bottom: 50px; 
    width: 100%;
}
.hero-quoteTextContainer{
    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
    margin-top: 0;
    color: var(--dark-text-color);
}
.quoteTextContainer{
    padding: 1.5rem 1.5rem 1rem 1.5rem;
    margin: 1rem 0;
    background-color: var(--projgrid-bg-color);
    border: solid var(--shadow-color);
    border-radius: 2rem;
    border-width: 1px;
    box-shadow: 10px 10px 0px var(--shadow-color);
    color: var(--dark-text-color);
    max-width: 50vw;
}
.quoteTextContainer p{
    line-height: 140%;
    text-align:justify
}

.genHeader{
    font-size: 32px;
    margin: 2rem 0 2rem 0;
}

footer{
    padding: .5rem;
    margin: 3.5rem 0rem 0rem;
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    text-align: center;
    font-style: italic;
    font-weight: 700;
    background-color: var(--main-nav-color);
    border-top: solid var(--dark-text-color);
    border-width: .1rem;
}
footer > *{
    margin: .25rem 0;
}
footer > p {
    font-size: 18px;
}

button,.btnstyle{
    padding: 1rem 2.5rem;
    background-color: var(--projgrid-bg-color);
    border: solid var(--shadow-color);
    border-radius: 2rem;
    border-width: 1px;
    box-shadow: 6px 6px 0px var(--shadow-color);
    color: var(--dark-text-color);
    font-weight: 950;
    font-size: 28px;
    cursor: pointer;
}
button:hover,.btnstyle:hover{
    transform: translate(4px, 4px);
    box-shadow: 2px 2px 0px var(--shadow-color);
    transition: .3s linear all;
}
.hireMe{
    display: flex;
    padding-top: 2rem;
}
.hireMe > a{
    padding: 1rem 10rem;
}
.noShadowbutton{
    box-shadow: none;
    padding: 1rem 10rem;
}
.noShadowbutton:hover{
    transform: none;
    box-shadow: none;
    background-color: var(--main-nav-color);
    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1) all;
}

.projtext{
    font-weight: 500;
    font-size: 18px;
    color: rgb(31, 31, 31);
    padding-right: .5rem;
    text-align: right
}
.projimg:hover{
    transform: scale(103%);
    opacity: 70%;
    cursor: pointer;
    transition: .2s cubic-bezier(1, 0, 0, 1) !important;
}
.projimgcontainer{
    overflow: hidden;
    margin-bottom: 0;
}
.projgridcontainer{
    background-color: var(--projgrid-bg-color);
    margin: 2rem 10rem;
    padding: 3rem 5rem;
    border: solid;
    border-color: var(--shadow-color);
    border-radius: 2rem;
    border-width: 1px;
    box-shadow: 10px 10px 0px var(--shadow-color);
    min-height: 43rem;
}
.projgrid{
    display: grid;
    grid-gap: 1.5rem;
    grid-template-columns: repeat(auto-fill, 32%);
    justify-content: center;
}
.projModalContainer{
    position: fixed;
    z-index: 1;
    top: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}
.projModal{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--main-bg-color);
    height: 100vh;
    overflow-y: scroll !important;
}
.projModalImg{
    display: flex;
    flex-direction: column;
}

.textcontainer{
    text-align: start;
    padding: 0 2rem;
}
/* ... */

